--- a/src/app/privacy/privacy.component.scss
+++ b/src/app/privacy/privacy.component.scss
@@ -56,7 +56,7 @@ mat-card {
 a {
   color: #797EF3;
   font-size: 18px;
-  line-height: 18px;
+  line-height: normal;
   font-family: Nunito, sans-serif;
   text-decoration: none;
 
@@ -70,12 +70,14 @@ a {
 * {
   font-family: Nunito, sans-serif;
   font-size: 20px;
+  line-height: normal;
   font-weight: 400;
   color: #000;
 }
 
 h1 {
   font-size: 46px;
+  line-height: normal;
   font-weight: 700;
   color: #444DF2;
 }
