--- a/src/styles.scss
+++ b/src/styles.scss
@@ -79,3 +79,27 @@ app-channel-chat {
 .d-none {
   display: none;
 }
+
+/* Custom Scrollbar */
+
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #4a93f1;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  cursor: pointer;
+  background: #444df2;
+}
